--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.js"
       integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
       crossorigin="anonymous"></script>
-      <script type="text/javascript" src="js/haiku.js"></script>
-      <script type="text/javascript" src="js/haiku-interface.js"></script>
-    <title>Haiku</title>
+      <script type="text/javascript" src="build/js/app.js"></script>
+  <title>Haiku</title>
   </head>
   <body>
     <h1>Haiku</h1>
