--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="https://code.jquery.com/jquery-3.2.1.js"
-      integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-      crossorigin="anonymous"></script>
-      <script type="text/javascript" src="build/js/app.js"></script>
-  <title>Haiku</title>
+    <link rel="stylesheet" href="build/css/vendor.css">
+    <script src="build/js/vendor.min.js"></script><script type="text/javascript" src="build/js/app.js"></script>
+    <script type="text/javascript" src="build/js/app.js"></script>
+    <title>Haiku</title>
   </head>
   <body>
     <h1>Haiku</h1>
@@ -17,7 +16,7 @@
       <button class="submitter" type="submit" name="button">Submit!</button>
     </form>
     <div id="solution">
-
+      <p id="time"></p>
     </div>
   </body>
 </html>
