--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="build/css/vendor.css">
+    <!-- <link rel="stylesheet" href="build/css/vendor.css"> -->
     <script src="build/js/vendor.min.js"></script><script type="text/javascript" src="build/js/app.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <title>Haiku</title>
@@ -12,7 +12,7 @@
     <p>Enter a text, we'll find the haikus</p>
     <form class="text-enter" id="text-entry" action="index.html" method="post">
       <label for="">Enter a body of text</label>
-      <input type="text" name="" value="">
+      <input id="the-text" type="text" name="" value="">
       <button class="submitter" type="submit" name="button">Submit!</button>
     </form>
     <div id="solution">
